Use controll queue in Controller
